--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div id="logo">
-        <img src="logo.gif" alt="" id="title" oncontextmenu="return false">
+        <!--<img src="logo.gif" alt="" id="title" oncontextmenu="return false">-->
     </div>
     <div id="main">
         <p>なにもないですよ</p>
