--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!--<img src="logo.gif" alt="" id="title" oncontextmenu="return false">-->
     </div>
     <div id="main">
-        <p>なにもないですよ</p>
+        なにもないですよ
     </div>
     <script>
         function openYahoo(){
