--- a/index.html
+++ b/index.html
@@ -5,77 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        body{
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            top: 0;
-            left: 0;
-            position: absolute;
-            z-index: 1;
-            background-color: white;
-        }
-        @keyframes fadeout {
-            75% {
-                opacity: 1;
-            }
-            100% {
-                opacity: 0;
-            }
-        }
-        #logo{
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            top: 0;
-            left: 0;
-            position: fixed;
-            z-index: 3;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: black;
-            animation-name: fadeout;
-            animation-duration: 2s;
-            animation-timing-function: ease;
-            animation-delay: 0s;
-            animation-iteration-count: 1;
-        }
-        #title{
-            display: block;
-            max-width: 500px;
-            max-height: 250px;
-            width: 100%;
-            height: 100%;
-        }
-        #main{
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            top: 0;
-            left: 0;
-            position: absolute;
-            z-index: 2;
-            background-color: white;
-        }
-    </style>
 </head>
 <body>
-    <div id="logo">
-        <!--<img src="logo.gif" alt="" id="title" oncontextmenu="return false">-->
-    </div>
-    <div id="main">
-        なにもないですよ
-    </div>
-    <script>
-        function openYahoo(){
-            document.getElementById("logo").remove();
-        }
-        setTimeout("openYahoo()", 2000);
-    </script>
+   <h1>runevana's site</h1>
+   <p>→<a href="#" alt="#">テスト</a></p>
 </body>
 </html>
