--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>runevana's site</h1>
+   <h1 style="margin:0;font-weight:normal;">runevana's site</h1>
+   <p>→<a href="#" alt="#">テスト</a></p>
    <p>→<a href="#" alt="#">テスト</a></p>
 </body>
 </html>
